--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,37 +1,34 @@
-# Docker compose to have Zookeeper, Kafka, and Kafka Manager running for development.
-# Provided by @chris-zen
-
-zookeeper:
-  image: confluent/zookeeper
-  ports:
-    - "2181:2181"
-
-kafka:
-  image: wurstmeister/kafka:0.9.0.0-1
-  ports:
-    - "9092:9092"
-  links:
-    - zookeeper:zk
-  environment:
-    - KAFKA_ADVERTISED_HOST_NAME
-    - KAFKA_ADVERTISED_PORT=9092
-    - KAFKA_DELETE_TOPIC_ENABLE=true
-    - KAFKA_LOG_RETENTION_HOURS=1
-    - KAFKA_MESSAGE_MAX_BYTES=10000000
-    - KAFKA_REPLICA_FETCH_MAX_BYTES=10000000
-    - KAFKA_GROUP_MAX_SESSION_TIMEOUT_MS=60000
-    - KAFKA_NUM_PARTITIONS=2
-    - KAFKA_DELETE_RETENTION_MS=1000
-
-
-kafka-manager:
-  image: sheepkiller/kafka-manager:latest
-  ports:
-    - "9000:9000"
-  links:
-    - zookeeper
-    - kafka
-  environment:
-    ZK_HOSTS: zookeeper:2181
-    APPLICATION_SECRET: letmein
-    KM_ARGS: -Djava.net.preferIPv4Stack=true
+version: '2'
+services:
+  zookeeper:
+    image: daocloud.io/jsongo/zookeeper:latest
+    container_name: zookeeper
+    network_mode: host
+  kafka:
+    image: daocloud.io/jsongo/kafka:latest
+    container_name: kafka
+    network_mode: host
+    environment:
+      KAFKA_ADVERTISED_HOST_NAME: 123.56.85.164
+      KAFKA_ZOOKEEPER_CONNECT: 127.0.0.1:2181
+      KAFKA_ADVERTISED_PORT: 9092
+      KAFKA_DELETE_TOPIC_ENABLE: "true"
+      KAFKA_LOG_RETENTION_HOURS: 1
+      KAFKA_MESSAGE_MAX_BYTES: 10000000
+      KAFKA_REPLICA_FETCH_MAX_BYTES: 10000000
+      KAFKA_GROUP_MAX_SESSION_TIMEOUT_MS: 60000
+      KAFKA_NUM_PARTITIONS: 2
+      KAFKA_DELETE_RETENTION_MS: 1000
+      KAFKA_CREATE_TOPICS: "default:1:1"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+  kafka-manager:
+    image: daocloud.io/jsongo/kafka-manager
+    container_name: kafka-manager
+    network_mode: host
+    environment:
+      ZK_HOSTS: 127.0.0.1:2181
+      APPLICATION_SECRET: xxx
+      KM_ARGS: -Djava.net.preferIPv4Stack=true
+      LOGIN_USER: kafka
+      LOGIN_PWD: xxx
